[package]
name = "framed_test"
version = "0.1.0"
authors = ["⚫ <jp@bultmann.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.3.5", features = ["full"] }
tokio-util = { version = "0.5.1", features = ["full"] }
bytes = "0.6.0"
futures = "0.3.8"
